--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="MULTITTRUST is a workshop of HHAI conference 2023">
-  <meta name="author" content="Akash Bhadange">
-  <title>MULTITTRUST: Workshop on Multidisciplinary Perspectives on Human-AI Team Trust</title>
+  <meta name="description" content="This is a workshop of the 19th International Conference on Persuasive Technology 2024">
+  <meta name="author" content="Nele Albers">
+  <title>Algorithmic Behavior Change Support Workshop</title>
   <link rel="icon" href="https://raw.githubusercontent.com/multittrust/multittrust.github.io/main/img/handshake.png">
 
   <!-- Bootstrap -->
@@ -95,10 +95,10 @@
         <div class="row hero-header" id="home">
           <div class="col-md-7">
             <img src="img/multittrust-logo.png" class="logo">
-            <h1>International Workshop on Multidisciplinary Perspectives on Human-AI Team Trust</h1>
-            <h3>26<sup>th</sup> June 2023</h3>
-            <h3>This workshop is part of HHAI conference</h3>
-            <h4>Design Offices Macherei: Weihenstephaner Str. 12, 81673 Munich, Germany</h4>
+            <h1>Algorithmic Behavior Change Support Workshop</h1>
+            <h3>10<sup>th</sup> April 2024</h3>
+            <h3>This workshop is part of the 19th International Conference on Persuasive Technology 2024</h3>
+            <h4>Wollongong, Australia</h4>
             
             <a href="https://hhai-conference.org/2023/registration/" class="btn btn-lg btn-red">Register Now <span class="ti-arrow-right"></span></a>
           </div>
@@ -179,7 +179,7 @@
                   <li>Submission deadline: <s>31st March</s> <b>5th April 2023 AoE</b></li>
                   <li>Notification deadline: 28th April 2023</li>
                   <li>Camera Ready: 31st May 2023</li>
-                  <li>Workshop: 26th June 2023</li>
+                  <li>Workshop: 10th April 2024</li>
                 </ul>
               </div>
             </div>
@@ -192,31 +192,31 @@
           <h2 class="row-title">Keynote Speakers</h2>
           <div class="row" id="lionelrobert">
             <div class="col-md-4 feature">
-              <img src="img/robert.png" class="keynote-img">
-              <h3>Lionel P. Robert</h3>
-              <p>University of Michigan</p>
+              <img src="img/nina_deliu.jpg" class="keynote-img">
+              <h3>Nina Deliu</h3>
+              <p>Sapienza University of Rome, University of Cambridge</p>
               <ul class="speaker-social">
-                <li><a href="https://sites.google.com/umich.edu/lionelrobert/"><span class="ti-world"></span></a></li>
+                <li><a href="https://nina-dl.github.io/"><span class="ti-world"></span></a></li>
               </ul>
             </div>
             <div class="col-md-8 feature">
-              <h3>The Problematic Problems of Human Trust in Robots:<br>Is Trusting a Robot More like a Teammate or a Tool and should we really care?</h3>
-              <p>As robotics advances and permeates various aspects of our social and work lives, the question of how humans we view and ultimately trust robots has become increasingly pertinent. Do humans view them as mere machines, automated tools designed to serve their needs or do they embrace a more empathetic approach, viewing and trusting them as actual teammates (i.e. humans)? On the one hand, proponents of robots as possible humans argue that computers are social actors (CASA) and that humans mindlessly interact with computers in much the same way they do humans. This view is often used to justify the employment of human-to-human theories and their corresponding measures to understand human-robot interactions. On the other hand, advocates of mechanization contend that humans do not view robots as humans but instead as automated tools. This view discourages using human-to-human theories and their corresponding measures to understand human-robot interactions. They advocate for more human-to-automation theories and measures of constructs like trust. In this thought-provoking presentation, I will explore the arguments supporting both perspectives and consider the potential consequences of each approach. Ultimately, this presentation aims to provide a balanced understanding of the complexities involved to encourage a nuanced dialogue on the subject. </p>
+              <h3>Title</h3>
+              <p>Abstract </p>
               <p></p>
             </div>
           </div>
           <div class="row" id="myrthetielman">
             <div class="col-md-4 feature">
-              <img src="img/tielman.png" class="keynote-img">
-              <h3>Myrthe L. Tielman</h3>
-              <p>Delft University of Technology</p>
+              <img src="img/speaker-2.png" class="keynote-img">
+              <h3>Deborah Richards</h3>
+              <p>Macquarie University</p>
               <ul class="speaker-social">
-                <li><a href="http://ii.tudelft.nl/~myrthe/"><span class="ti-world"></span></a></li>
+                <li><a href="https://researchers.mq.edu.au/en/persons/deborah-richards"><span class="ti-world"></span></a></li>
               </ul>
             </div>
             <div class="col-md-8 feature">
-              <h3>Let's talk about trust</h3>
-              <p>Trust is a hot topic. It’s something very important to humans, it’s important to teams, and it’s important for AI. So many people are looking into trust, and as human-AI team researchers it seems something we should care a lot about. But what do we actually mean when we talk about trust? There’s a lot of different perspectives and definitions. Should we care about that, or try to come to an agreement? In this talk, I argue that meaning is more important than agreement when it comes to words. But meaning is crucial, as through looking at the different meanings of trust, we also might gain new perspectives on how to achieve it.</p>
+              <h3>Title</h3>
+              <p>Abstract.</p>
             </div>
           </div>
         </div>
@@ -225,21 +225,20 @@
         <div class="row me-row content-ct teal" id="organizers">
           <h2 class="row-title">Organizers</h2>
           <div class="col-md-6 feature">
-            <img src="img/carolina.png" class="speaker-img">
-            <h3>Carolina Centeio Jorge</h3>
+            <img src="img/speaker-3.png" class="speaker-img">
+            <h3>Nele Albers</h3>
             <p>Delft University of Technology</p>
             <ul class="speaker-social">
-              <li><a href="https://research.tudelft.nl/en/persons/carolina-centeio-jorge"><span class="ti-world"></span></a></li>
-              <li><a href="https://twitter.com/centeiojorge"><span class="ti-twitter"></span></a></li>
-              <li><a href="mailto:c.jorge@tudelft.nl"><span class="ti-email"></span></a></li>
+              <li><a href="https://www.tudelft.nl/ewi/over-de-faculteit/afdelingen/intelligent-systems/interactive-intelligence/people/current-group-members/nele-albers"><span class="ti-world"></span></a></li>
+              <li><a href="mailto:n.albers@tudelft.nl"><span class="ti-email"></span></a></li>
             </ul>
           </div>
           <div class="col-md-6 feature">
-            <img src="img/ulfert.png" class="speaker-img">
-            <h3>Anna-Sophie Ulfert-Blank</h3>
-            <p>Eindhoven University of Technology</p>
+            <img src="img/speaker-4.png" class="speaker-img">
+            <h3>Amal Abdulrahman</h3>
+            <p>Delft University of Technology, Macquarie University</p>
             <ul class="speaker-social">
-              <li><a href="https://research.tue.nl/en/persons/anna-sophie-ulfert-blank"><span class="ti-world"></span></a></li>
+              <li><a href="https://www.tudelft.nl/ewi/over-de-faculteit/afdelingen/intelligent-systems/interactive-intelligence/people/current-group-members/amal-abdulrahman"><span class="ti-world"></span></a></li>
             </ul>
           </div>
         </div>
