--- a/index.html
+++ b/index.html
@@ -114,12 +114,7 @@
           <div class="row me-row content-ct">
             <h2 class="row-title">About</h2>
             <div class="col-md feature">
-              <p>MULTITTRUST is a workshop of <a href="https://www.hhai-conference.org/">HHAI conference 2023</a>. This workshop appears from the need to create a multidisciplinary research community of people who study the different perspectives and layers of trust dynamics in human-AI teams.
-                Human-AI teamwork is no longer a topic of the future. With the increasing prominence of these teams in diverse industries, several challenges arise that need to be addressed carefully.
-                One of these challenges is understanding how trust is defined and how it functions in Human-AI teams. Psychological literatures suggests that within human teams, team members rely on trust to make decisions and to be willing to rely on their team.
-                Besides that, the multi-agent systems (MAS) community has been adopting trust mechanisms to support decision-making of the agents regarding their peers. Finally, in the last couple of years, researchers have been focusing on how humans trust AI and how AI can be trustworthy. But when we think of a team composed of both humans and AI, with recurrent (or not) interactions, how do these all come together? Currently, we are missing approaches that integrate prior literature on trust in teams in these different disciplines (esp. Psychology and Computer Science).
-                In particular, when looking at dyadic or team-level trust relationships in such a team, we also need to look at how an AI should trust a human teammate and how trust can be defined in such teams.              Furthermore, the trust of the human in the AI team member and vice-versa will change over time and also affect each other. In this workshop, we want to motivate the conversation across the different fields and domains.
-                Together, we may shape the road to answer these questions and more.</p>
+              <p>About the workshop</p>
             </div>
           </div>
         </div>
@@ -241,6 +236,30 @@
               <li><a href="https://www.tudelft.nl/ewi/over-de-faculteit/afdelingen/intelligent-systems/interactive-intelligence/people/current-group-members/amal-abdulrahman"><span class="ti-world"></span></a></li>
             </ul>
           </div>
+		  <div class="col-md-6 feature">
+            <img src="img/speaker-4.png" class="speaker-img">
+            <h3>Deborah Richards</h3>
+            <p>Macquarie University</p>
+            <ul class="speaker-social">
+              <li><a href="https://researchers.mq.edu.au/en/persons/deborah-richards"><span class="ti-world"></span></a></li>
+            </ul>
+          </div>
+		  <div class="col-md-6 feature">
+            <img src="img/speaker-4.png" class="speaker-img">
+            <h3>Caroline Figueroa</h3>
+            <p>Delft University of Technology</p>
+            <ul class="speaker-social">
+              <li><a href="https://tudelft.nl/staff/c.figueroa/"><span class="ti-world"></span></a></li>
+            </ul>
+          </div>
+		  <div class="col-md-6 feature">
+            <img src="img/speaker-4.png" class="speaker-img">
+            <h3>Bibhas Chakraborty</h3>
+            <p>National University of Singapore, Duke University</p>
+            <ul class="speaker-social">
+              <li><a href="https://www.duke-nus.edu.sg/cqm/our-staff/staff-details-page/Detail/bibhas-chakraborty"><span class="ti-world"></span></a></li>
+            </ul>
+          </div>
         </div>
 
         <div class="container" id="programmecommittee">
@@ -249,25 +268,8 @@
               <h2 class="row-title">Programme Committee</h2>
               <div class="col-md feature">
                 <ul>
-                  <li>Filipa Correia, ITI-LARSYS, PT</li>
-                  <li>Cristiano Castelfranchi, ISTC-CNR, IT</li>
-                  <li>Alessandro Sapienza, ISTC-CNR, IT</li>
-                  <li>Michelle Zhao, Carnegie Mellon University, US</li>
-                  <li>Rino Falcone, ISTC-CNR, IT</li>
-                  <li>Catholijn Jonker, Delft University of Technology, NL</li>
-                  <li>Siddharth Mehrotra, Delft University of Technology, NL</li>
-                  <li>Beau Schelble, Clemson University, US</li>
-                  <li>Filippo Cantucci, ISTC-CNR, IT</li>
-                  <li>Mengyao Li, University of Wisconsin-Madison, US</li>
-                  <li>X. Jessie Yang, University of Michigan, US</li>
-                  <li>Connor Esterwood, University of Michigan, US</li>
-                  <li>Samuele Vinanzi, Sheffield Hallam University, UK</li>
-                  <li>Alan R. Wagner, Penn State University, US</li>
-                  <li>Ewart de Visser, USAFA, US</li>
-                  <li>Glenda Hannibal, Ulm University, DE</li>
-                  <li>Hebert Azevedo-Sá, Military Institute of Engineering, BR</li>
-                  <li>Eleni Georganta, University of Amsterdam, NL</li>
-                  <li>Ruben Verhagen, Delft University of Technology, NL</li>
+                  <li>Member 1, Institute 1</li>
+                  <li>Member 2, Institute 2</li>
                 </ul>
               </div>
             </div>
@@ -276,7 +278,7 @@
         <div class="container teal" id="programme">
           <div class="container">
             <div class="row me-row content-ct">
-              <h2 class="row-title">Programme</h2>
+              <h2 class="row-title">Program</h2>
               <div class="col-md feature">
                 <table class="tg">
 
@@ -289,73 +291,23 @@
                   <tbody>
                     <tr>
                       <td class="tg-lboi">9h00</td>
-                      <td class="tg-lboi" colspan="2">Networking activity</td>
+                      <td class="tg-lboi" colspan="2">Activity 1</td>
                     </tr>
                     <tr>
                       <td class="tg-lboi" rowspan="2">9h30</td>
-                      <td class="tg-lboi" rowspan="2">Lightning talks 1 + discussion<br><br><i>Perception of AI teammate's trustworthiness</i></td>
-                      <td class="tg-cly1"><a href="https://surfdrive.surf.nl/files/index.php/s/bhH28aCnLQHVmCl"><b>The Trustworthiness Assessment Model – A Micro and Macro Level Perspective</b></a><br><i>Nadine Schlicker and Markus Langer</i></td>
+                      <td class="tg-lboi" rowspan="2">Lightning talks 1<br><br><i>Topic</i></td>
+                      <td class="tg-cly1"><a href="https://surfdrive.surf.nl/files/index.php/s/bhH28aCnLQHVmCl"><b>Title Talk 1</b></a><br><i>Authors Talk 1</i></td>
                     </tr>
                     <tr>
-                      <td class="tg-cly1"><a href="https://surfdrive.surf.nl/files/index.php/s/CMps2ZHj8cDughI"><b>AI-Enabled Decision Support Systems: Tool or Teammate?</b></a><br><i>Myke C. Cohen and Michelle Mancenido</i></td>
+                      <td class="tg-cly1"><a href="https://surfdrive.surf.nl/files/index.php/s/CMps2ZHj8cDughI"><b>Title Talk 2</b></a><br><i>Authors Talk 2</i></td>
                     </tr>
                     <tr>
                       <td class="tg-lboi">10h00</td>
                       <td class="tg-vrnj" colspan="2">Break</td>
                     </tr>
                     <tr>
-                      <td class="tg-lboi" rowspan="2">10h30</td>
-                      <td class="tg-lboi" rowspan="2">Lightning talks 2 + discussion<br><br><i>Improving AI teammate's trustworthiness</i></td>
-                      <td class="tg-cly1"><a href="https://surfdrive.surf.nl/files/index.php/s/iymUcClEgx8jLZB"><b>Communicating AI intentions to boost Human AI cooperation</b></a><br><i>Bruno Berberian, Marin Le Guillou and Marine Pagliari</i></td>
-                    </tr>
-                    <tr>
-                      <td class="tg-cly1"><a href="https://surfdrive.surf.nl/files/index.php/s/IDM4eQ9lH4qtUlJ"><b>The Effects of Social Intelligence on Trust in Human-AI Teams</b></a><br><i>Morgan Bailey, Benjamin Gancz and Frank Pollick</i></td>
-                    </tr>
-                    <tr>
-                      <td class="tg-lboi">11h00</td>
-                      <td class="tg-lboi">Keynote 1</td>
-                      <td class="tg-cly1"><a href="#lionelrobert"><b>Problematic Problems of Human Trust in Robots:</b><br><b>Is Trusting a Robot More like a Teammate or a Tool and should we really care?</b></a><br><br><i>Lionel P Robert</i></td>
-                    </tr>
-                    <tr>
-                      <td class="tg-lboi">12h00</td>
-                      <td class="tg-vrnj" colspan="2">Lunch</td>
-                    </tr>
-                    <tr>
-                      <td class="tg-lboi">13h30</td>
-                      <td class="tg-lboi">Keynote 2</td>
-                      <td class="tg-cly1"><a href="#myrthetielman"><b>Let's talk about trust</b></a><br><br><i>Myrthe Tielman</i></td>
-                    </tr>
-                    <tr>
-                      <td class="tg-lboi" rowspan="2">14h30</td>
-                      <td class="tg-lboi" rowspan="2">Lightning talks 2 + discussion<br><br><i>Calibrating Human-AI trust in teams</i></td>
-                      <td class="tg-cly1"><a href="https://surfdrive.surf.nl/files/index.php/s/UIYYqqEvbvOuptb"><b>Investigating Human-Robot Overtrust During Crises</b></a><br><i>Colin Holbrook, Daniel Holman, Alan Wagner, Tyler Marghetis, Gale Lucas, Brett Sheeran, Vidullan Surendran, Jared Armagost, Savanna Spazak, Kevin Andor and Yinxuan Yin</i></td>
-                    </tr>
-                    <tr>
-                      <td class="tg-cly1"><a href="https://surfdrive.surf.nl/files/index.php/s/VC2DvHjQf0fEOrY"><b>Mutually Adaptive Trust Calibration in Human-AI Teams</b></a><br><i>Ewart de Visser, Ali Momen, James Walliser, Spencer Kohn, Tyler Shaw and Chad Tossell</i></td>
-                    </tr>
-                    <tr>
-                      <td class="tg-lboi">15h00</td>
-                      <td class="tg-vrnj" colspan="2">Break</td>
-                    </tr>
-                    <tr>
-                      <td class="tg-lboi" rowspan="2">15h30</td>
-                      <td class="tg-lboi" rowspan="2">Lightning talks 4 + discussion<br><br><i>Decision-making in Human-AI teams</i></td>
-                      <td class="tg-cly1"><a href="https://surfdrive.surf.nl/files/index.php/s/8dJFC1gX8sJLyGy"><b>Causing Intended Effects in Collaborative Decision-Making</b></a><br><i>André Meyer-Vitali and Wico Mulder</i></td>
-                    </tr>
-                    <tr>
-                      <td class="tg-cly1"><a href="https://surfdrive.surf.nl/files/index.php/s/bSfCEX2W0gVpiiD"><b>Artificial Trust for Decision-Making in Human-AI Teamwork: Steps and Challenges</b></a><br><i>Carolina Centeio Jorge, Catholijn M. Jonker and Myrthe L. Tielman</i></td>
-                    </tr>
-                    <tr>
-                      <td class="tg-lboi" rowspan="2">16h00</td>
-                      <td class="tg-lboi" rowspan="2">Lightning talks 5 + discussion<br><br><i>Human-AI team trust</i></td>
-                      <td class="tg-cly1"><a href="https://surfdrive.surf.nl/files/index.php/s/qxIjOCyXF56QuQy"><b>Trust Dispersion and Effective Human-AI Team Collaboration: The Role of Psychological Safety</b></a><br><i>Tilman Nols, Anna-Sophie Ulfert-Blank and Avi Parush</i></td>
-                    </tr>
-                    <tr>
-                      <td class="tg-cly1"><a href="https://surfdrive.surf.nl/files/index.php/s/FFKVMbSzEIlPghC"><b>Piecing Together the Puzzle: Understanding Trust in Human-AI Teams</b></a><br><i>Anna-Sophie Ulfert-Blank, Eleni Georganta, Myrthe L. Tielman and Tal Oron-Gilad</i></td>
-                    </tr>
-                    <tr>
                       <td class="tg-cly1">16h30</td>
-                      <td class="tg-cly1" colspan="2">Reflections</td>
+                      <td class="tg-cly1" colspan="2">Activity x</td>
                     </tr>
                     <tr>
                       <td class="tg-cly1">17h00</td>
@@ -372,7 +324,7 @@
             <div class="row me-row content-ct">
               <h2 class="row-title">Registration</h2>
               <div class="col-md feature">
-                <p>Registraton is open and can be done through <a href="https://hhai-conference.org/2023/registration/">HHAI conference 2023 website</a>.</p>
+                <p>Registraton can be done through the <a href="https://2024.persuasivetech.org/">Persuasive Technology conference website</a>.</p>
               </div>
             </div>
           </div>
@@ -383,8 +335,8 @@
             <div class="row me-row content-ct">
               <h2 class="row-title">Contact</h2>
               <div class="col-md feature">
-                <p>For any question related to the workshop please contact Carolina Jorge:</p>
-                <p>C dot Jorge at tudelft dot nl (also hiperlink available at Organizers section)
+                <p>For any question related to the workshop please contact Nele Albers:</p>
+                <p>N dot Albers at tudelft dot nl (also hyperlink available at Organizers section)
                 </p>
               </div>
             </div>
