add more people

--- a/index.html
+++ b/index.html
@@ -260,21 +260,80 @@
               <li><a href="https://www.duke-nus.edu.sg/cqm/our-staff/staff-details-page/Detail/bibhas-chakraborty"><span class="ti-world"></span></a></li>
             </ul>
           </div>
-        </div>
-
-        <div class="container" id="programmecommittee">
-          <div class="container">
-            <div class="row me-row content-ct">
-              <h2 class="row-title">Programme Committee</h2>
-              <div class="col-md feature">
-                <ul>
-                  <li>Member 1, Institute 1</li>
-                  <li>Member 2, Institute 2</li>
-                </ul>
-              </div>
-            </div>
+		  <div class="col-md-6 feature">
+            <img src="img/speaker-4.png" class="speaker-img">
+            <h3>Ananya Bhattacharjee</h3>
+            <p>University of Toronto</p>
+            <ul class="speaker-social">
+              <li><a href="https://sites.google.com/view/ananya-bhattacharjee/home"><span class="ti-world"></span></a></li>
+            </ul>
+          </div>
+		  <div class="col-md-6 feature">
+            <img src="img/speaker-4.png" class="speaker-img">
+            <h3>Linwei He</h3>
+            <p>Tilburg University</p>
+            <ul class="speaker-social">
+              <li><a href="https://www.tilburguniversity.edu/nl/medewerkers/l-he_1"><span class="ti-world"></span></a></li>
+            </ul>
+          </div>
+		  <div class="col-md-6 feature">
+            <img src="img/speaker-4.png" class="speaker-img">
+            <h3>Mark A. Neerincx</h3>
+            <p>Delft University of Technology, TNO</p>
+            <ul class="speaker-social">
+              <li><a href="https://www.tno.nl/en/about-tno/our-people/mark-neerincx/"><span class="ti-world"></span></a></li>
+            </ul>
+          </div>
+		  <div class="col-md-6 feature">
+            <img src="img/speaker-2.png" class="speaker-img">
+            <h3>Joseph Jay Williams</h3>
+            <p>University of Toronto</p>
+            <ul class="speaker-social">
+              <li><a href="https://www.josephjaywilliams.com/"><span class="ti-world"></span></a></li>
+            </ul>
+          </div>
+		  <div class="col-md-6 feature">
+            <img src="img/speaker-2.png" class="speaker-img">
+            <h3>Nezih Younsi</h3>
+            <p>Sorbonne University</p>
+            <ul class="speaker-social">
+              <li><a href="http://www-old.isir.upmc.fr/index.php?op=view_profil&lang=en&id=630&pageid=publi"><span class="ti-world"></span></a></li>
+            </ul>
+          </div>
+		  <div class="col-md-6 feature">
+            <img src="img/speaker-2.png" class="speaker-img">
+            <h3>Tibor Bosse</h3>
+            <p>Radboud University</p>
+            <ul class="speaker-social">
+              <li><a href="https://tiborbosse.com/"><span class="ti-world"></span></a></li>
+            </ul>
+          </div>
+		  <div class="col-md-6 feature">
+            <img src="img/speaker-3.png" class="speaker-img">
+            <h3>Annemiek Linn</h3>
+            <p>University of Amsterdam</p>
+            <ul class="speaker-social">
+              <li><a href="https://www.uva.nl/en/profile/l/i/a.j.linn/a.j.linn.html"><span class="ti-world"></span></a></li>
+            </ul>
+          </div>
+		  <div class="col-md-6 feature">
+            <img src="img/speaker-5.png" class="speaker-img">
+            <h3>Crystal Smit</h3>
+            <p>Erasmus University Rotterdam</p>
+            <ul class="speaker-social">
+              <li><a href="https://www.eur.nl/en/people/crystal-smit"><span class="ti-world"></span></a></li>
+            </ul>
+          </div>
+		  <div class="col-md-6 feature">
+            <img src="img/speaker-4.png" class="speaker-img">
+            <h3>Willem-Paul Brinkman</h3>
+            <p>Delft University of Technology</p>
+            <ul class="speaker-social">
+              <li><a href="http://ii.tudelft.nl/willem-paul/index.php/"><span class="ti-world"></span></a></li>
+            </ul>
           </div>
         </div>
+
         <div class="container teal" id="programme">
           <div class="container">
             <div class="row me-row content-ct">
