--- a/index.html
+++ b/index.html
@@ -244,14 +244,7 @@
               <li><a href="https://researchers.mq.edu.au/en/persons/deborah-richards"><span class="ti-world"></span></a></li>
             </ul>
           </div>
-		  <div class="col-md-4 feature">
-            <img src="img/speaker-4.png" class="speaker-img">
-            <h3>Caroline Figueroa</h3>
-            <p>Delft University of Technology</p>
-            <ul class="speaker-social">
-              <li><a href="https://tudelft.nl/staff/c.figueroa/"><span class="ti-world"></span></a></li>
-            </ul>
-          </div>
+		  
 		  <div class="col-md-4 feature">
             <img src="img/speaker-4.png" class="speaker-img">
             <h3>Bibhas Chakraborty</h3>
@@ -383,7 +376,7 @@
             <div class="row me-row content-ct">
               <h2 class="row-title">Registration</h2>
               <div class="col-md feature">
-                <p>Registraton can be done through the <a href="https://2024.persuasivetech.org/">Persuasive Technology conference website</a>.</p>
+                <p>Registration can be done through the <a href="https://2024.persuasivetech.org/">Persuasive Technology conference website</a>.</p>
               </div>
             </div>
           </div>
