--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="This is a workshop of the 19th International Conference on Persuasive Technology 2024">
   <meta name="author" content="Nele Albers">
   <title>Algorithmic Behavior Change Support Workshop</title>
-  <link rel="icon" href="https://raw.githubusercontent.com/multittrust/multittrust.github.io/main/img/handshake.png">
+  <link rel="icon" href="https://raw.githubusercontent.com/multittrust/multittrust.github.io/main/img/conversation.png">
 
   <!-- Bootstrap -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -171,9 +171,9 @@
               <h2 class="row-title">Important Dates</h2>
               <div class="col-md feature">
                 <ul>
-                  <li>Submission deadline: <s>31st March</s> <b>5th April 2023 AoE</b></li>
-                  <li>Notification deadline: 28th April 2023</li>
-                  <li>Camera Ready: 31st May 2023</li>
+                  <li>Submission deadline: xxx </li>
+                  <li>Notification deadline: xxx </li>
+                  <li>Camera Ready: xxx </li>
                   <li>Workshop: 10th April 2024</li>
                 </ul>
               </div>
@@ -244,7 +244,14 @@
               <li><a href="https://researchers.mq.edu.au/en/persons/deborah-richards"><span class="ti-world"></span></a></li>
             </ul>
           </div>
-		  
+		  <div class="col-md-4 feature">
+            <img src="img/speaker-4.png" class="speaker-img">
+            <h3>Caroline Figueroa</h3>
+            <p>Delft University of Technology</p>
+            <ul class="speaker-social">
+              <li><a href="https://tudelft.nl/staff/c.figueroa/"><span class="ti-world"></span></a></li>
+            </ul>
+          </div>
 		  <div class="col-md-4 feature">
             <img src="img/speaker-4.png" class="speaker-img">
             <h3>Bibhas Chakraborty</h3>
