--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="This is a workshop of the 19th International Conference on Persuasive Technology 2024">
   <meta name="author" content="Nele Albers">
   <title>Algorithmic Behavior Change Support Workshop</title>
-  <link rel="icon" href="https://raw.githubusercontent.com/multittrust/multittrust.github.io/main/img/conversation.png">
+  <link rel="icon" href="https://raw.githubusercontent.com/ALBECS-Workshop/ALBECS-Workshop.github.io/main/img/conversation.png">
 
   <!-- Bootstrap -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -103,7 +103,7 @@
             <a href="https://hhai-conference.org/2023/registration/" class="btn btn-lg btn-red">Register Now <span class="ti-arrow-right"></span></a>
           </div>
           <div class="col-md-5 hidden-xs">
-            <img src="img/handshake.png" class="rocket animated bounce">
+            <img src="img/conversation.png" class="rocket animated bounce">
           </div>
         </div>
         <!-- End: Header -->
