--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             </div>
           </div>
         </div>
-        <div class="container teal" id="topics">
+        <div class="container warmorange" id="topics">
           <div class="container">
             <div class="row me-row content-ct">
               <h2 class="row-title">Topics</h2>
@@ -165,7 +165,7 @@
             </div>
           </div>
         </div> 
-        <div class="container teal" id="dates">
+        <div class="container warmorange" id="dates">
           <div class="container">
             <div class="row me-row content-ct">
               <h2 class="row-title">Important Dates</h2>
@@ -217,7 +217,7 @@
         </div>
         <!-- End: Speakers -->
 
-        <div class="row me-row content-ct teal" id="organizers">
+        <div class="row me-row content-ct warmorange" id="organizers">
           <h2 class="row-title">Organizers</h2>
           <div class="col-md-4 feature">
             <img src="img/speaker-3.png" class="speaker-img">
@@ -334,7 +334,7 @@
           </div>
         </div>
 
-        <div class="container teal" id="programme">
+        <div class="container warmorange" id="programme">
           <div class="container">
             <div class="row me-row content-ct">
               <h2 class="row-title">Program</h2>
@@ -389,7 +389,7 @@
           </div>
         </div>
 
-        <div class="container teal" id="contact">
+        <div class="container warmorange" id="contact">
           <div class="container">
             <div class="row me-row content-ct">
               <h2 class="row-title">Contact</h2>
