--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           <div class="row me-row content-ct">
             <h2 class="row-title">About</h2>
             <div class="col-md feature">
-              <p>About the workshop</p>
+              <p>About the Workshop</p>
             </div>
           </div>
         </div>
@@ -123,19 +123,11 @@
             <div class="row me-row content-ct">
               <h2 class="row-title">Topics</h2>
               <div class="col-md feature">
-                <p>This workshop calls for contribution and/or participation from several disciplines, including Psychology, Sociology, Cognitive Science, Computer Science, Artificial Intelligence, Robotics, Human-Computer Interaction, Design and Philosophy. Topics related
-                  to this workshop include:</p>
+                <p>This workshop brings together researchers, designers, developers, practitioners, and educators who are interested in the concept, development, evaluation, and impact of algorithmic behavior change support. We explicitly invite participants from various backgrounds such as artificial intelligence, human-computer interaction, psychology, medical practice, and ethics of technology to contribute their perspectives and experiences. The broader objective of this workshop is to strengthen the community of people working on adaptive support in behavior change applications. To this end, the workshop aims to create a lively exchange of ideas that benefits both the current and future research of the individual workshop participants. Specifically, the workshop's aim is to a) learn about each other's work, b) jointly work on problems of the workshop participants, and c) establish a vision for future work on algorithmic behavior change support.</p>
                 <p></p>
                 <ul>
                   <b>
-                    <li>Measures of (team) trust in human-AI teams</li>
-                    <li>The role of (human) trust and trustworthiness in human-AI teams</li>
-                    <li>Trust dynamics in human-AI teams</li>
-                    <li>Hybrid techniques (knowledge driven + data driven) to assess trust and trustworthiness in human-AI teams</li>
-                    <li>Machine learning techniques to detect trust and trustworthiness in human-AI teams and teammates</li>
-                    <li>Evaluation methods for trust and trustworthiness models in human-AI teams</li>
-                    <li>Experimental settings for trust dynamics in human-AI teams</li> 
-                    <li>Design of systems that take into account trust dynamics in human-AI teams</li>
+                    <li>Topic 1</li>
                   </b>
                 </ul>
               </div>
@@ -145,20 +137,18 @@
         <div class="container" id="call">
           <div class="container">
             <div class="row me-row content-ct">
-              <h2 class="row-title">Call for contributions</h2>
+              <h2 class="row-title">Call for Contributions</h2>
               <div class="col-md feature">
-                <p>You are kindly invited to participate in our workshop with or without submission. However, as the idea of the workshop is to create a community, we highly advise you to submit a short paper containing your current, past or future work on one of the topics mentioned above.
-                  The contributions can be work in progress, extended abstracts, summary of previous research, or breakthrough ideas that would enrich our discussions during the workshop.
-                  Submissions will be anonymised, peer-reviewed and selected based on relevance and quality of writing. In case there are too many submissions, we will also give preference to a varied programme.
+                <p> Call for contributions text.
                 </p>
                 <p>
-                  Upon acceptance, at least 1 author should attend the workshop in person and be ready to do a short presentation (lighting talk of approx. 7 minutes). On rejection, you are also welcome to still join our workshop. To attend the workshop, participants must be registered for HHAI conference.
+                  Upon acceptance, at least 1 author should attend the workshop in person and be ready to xxx. On rejection, you are also welcome to still join our workshop. To attend the workshop, participants must be registered for xxx.
                 </p>
-                <p>  All submissions should adhere to <a href="https://www.iospress.com/book-article-instructions">IOS formatting guidelines</a>. Papers should be written in English and have 2-4 pages (excluding references).
+                <p>  All submissions should adhere to xxx guidelines. Papers should be written in English and have xxx pages (excluding references).
                 </p> 
-                <p><b>Please anonymise your submission.</b></p>
+                <p><b>Please anonymize your submission.</b></p>
                 <p></p>
-                <p>  You can submit through <a href="https://easychair.org/conferences/?conf=multittrust23">easychair</a>. </p>
+                <p>  You can submit through easychair: add link. </p>
                 
                 <p></p>
               </div>
