--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
             </a>
           </li>
           <li>
-            <a href="#topics" class="page-scroll">
-              <span class="menu-title">Topics</span>
+            <a href="#thisworkshop" class="page-scroll">
+              <span class="menu-title">This Workshop</span>
               <span class="dot"></span>
             </a>
           </li>
           <li>
             <a href="#call" class="page-scroll">
-              <span class="menu-title">Call for contributions</span>
+              <span class="menu-title">Call for Contributions</span>
               <span class="dot"></span>
             </a>
           </li>
@@ -108,20 +108,20 @@
         </div>
         <!-- End: Header -->
       </div>
-      <div class="container" id="about">
+      <div class="container" id="motivation">
         <!-- Start: Desc -->
         <div class="container">
           <div class="row me-row content-ct">
-            <h2 class="row-title">About</h2>
+            <h2 class="row-title">Motivation</h2>
             <div class="col-md feature">
-              <p>About the Workshop</p>
+              <p>Working out more, reducing food waste, being kinder to others, ... - there are many behaviors people wish to change. Yet, while many behavior change applications have been developed to support people, users commonly do not adhere to these applications or abandon them entirely. To address the apparent mismatch between what the applications offer and what users need, a variety of algorithmic approaches has been developed to adapt what the applications offer, when, how, and with whom. These algorithmic approaches thereby draw from insights in areas such as nudging, persuasive technology, eCoaches, and conversational agents and use various algorithmic techniques from recommender systems to machine and reinforcement learning. Placing the human at the center and combining the strengths of humans and technology (i.e., augmented or hybrid intelligence) often is an important design guideline, as is accounting for ethical and societal values.</p>
             </div>
           </div>
         </div>
-        <div class="container warmorange" id="topics">
+        <div class="container warmorange" id="thisworkshop">
           <div class="container">
             <div class="row me-row content-ct">
-              <h2 class="row-title">Topics</h2>
+              <h2 class="row-title">This Workshop</h2>
               <div class="col-md feature">
                 <p>This workshop brings together researchers, designers, developers, practitioners, and educators who are interested in the concept, development, evaluation, and impact of algorithmic behavior change support. We explicitly invite participants from various backgrounds such as artificial intelligence, human-computer interaction, psychology, medical practice, and ethics of technology to contribute their perspectives and experiences. The broader objective of this workshop is to strengthen the community of people working on adaptive support in behavior change applications. To this end, the workshop aims to create a lively exchange of ideas that benefits both the current and future research of the individual workshop participants. Specifically, the workshop's aim is to a) learn about each other's work, b) jointly work on problems of the workshop participants, and c) establish a vision for future work on algorithmic behavior change support.</p>
                 <p></p>
@@ -139,12 +139,12 @@
             <div class="row me-row content-ct">
               <h2 class="row-title">Call for Contributions</h2>
               <div class="col-md feature">
-                <p> Call for contributions text.
+                <p> Submissions to this workshop are in the form of short position papers describing both the authors' work and a problem that they would like to work on together with the other workshop participants (e.g., provide feedback on an idea for an algorithm, serve as a focus group, or brainstorm on a research question).
                 </p>
                 <p>
                   Upon acceptance, at least 1 author should attend the workshop in person and be ready to xxx. On rejection, you are also welcome to still join our workshop. To attend the workshop, participants must be registered for xxx.
                 </p>
-                <p>  All submissions should adhere to xxx guidelines. Papers should be written in English and have xxx pages (excluding references).
+                <p>  All submissions should adhere to <a href="https://www.springer.com/gp/computer-science/lncs/conference-proceedings-guidelines">the Springer LNCS guidelines</a>. Papers should be written in English and have at most xxx pages (excluding acknowledgments and references).
                 </p> 
                 <p><b>Please anonymize your submission.</b></p>
                 <p></p>
