one university for Amal

--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
               <span class="dot"></span>
             </a>
           </li>
+		  <li>
+            <a href="#motivation" class="page-scroll">
+              <span class="menu-title">Motivation</span>
+              <span class="dot"></span>
+            </a>
+          </li>
           <li>
             <a href="#thisworkshop" class="page-scroll">
               <span class="menu-title">This Workshop</span>
@@ -65,14 +71,8 @@
             </a>
           </li>
           <li>
-            <a href="#programmecommittee" class="page-scroll">
-              <span class="menu-title">Programme Committee</span>
-              <span class="dot"></span>
-            </a>
-          </li>
-          <li>
-            <a href="#programme" class="page-scroll">
-              <span class="menu-title">Programme</span>
+            <a href="#program" class="page-scroll">
+              <span class="menu-title">Program</span>
               <span class="dot"></span>
             </a>
           </li>
@@ -221,7 +221,7 @@
           <div class="col-md-4 feature">
             <img src="img/speaker-4.png" class="speaker-img">
             <h3>Amal Abdulrahman</h3>
-            <p>Delft University of Technology, Macquarie University</p>
+            <p>Delft University of Technology</p>
             <ul class="speaker-social">
               <li><a href="https://www.tudelft.nl/ewi/over-de-faculteit/afdelingen/intelligent-systems/interactive-intelligence/people/current-group-members/amal-abdulrahman"><span class="ti-world"></span></a></li>
             </ul>
@@ -324,7 +324,7 @@
           </div>
         </div>
 
-        <div class="container warmorange" id="programme">
+        <div class="container warmorange" id="program">
           <div class="container">
             <div class="row me-row content-ct">
               <h2 class="row-title">Program</h2>
@@ -373,7 +373,7 @@
             <div class="row me-row content-ct">
               <h2 class="row-title">Registration</h2>
               <div class="col-md feature">
-                <p>Registration can be done through the <a href="https://2024.persuasivetech.org/">Persuasive Technology conference website</a>.</p>
+                <p>Please register through <a href="https://2024.persuasivetech.org/">the Persuasive Technology conference website</a>.</p>
               </div>
             </div>
           </div>
