--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="This is a workshop of the 19th International Conference on Persuasive Technology 2024">
   <meta name="author" content="Nele Albers">
-  <title>Algorithmic Behavior Change Support Workshop</title>
+  <title>Workshop on Algorithmic Behavior Change Support</title>
   <link rel="icon" href="https://raw.githubusercontent.com/ALBECS-Workshop/ALBECS-Workshop.github.io/main/img/conversation.png">
 
   <!-- Bootstrap -->
@@ -100,7 +100,7 @@
             <h3>This workshop is part of the 19th International Conference on Persuasive Technology 2024</h3>
             <h4>Wollongong, Australia</h4>
             
-            <a href="https://hhai-conference.org/2023/registration/" class="btn btn-lg btn-red">Register Now <span class="ti-arrow-right"></span></a>
+            <a href="https://2024.persuasivetech.org/" class="btn btn-lg btn-red">Register Now <span class="ti-arrow-right"></span></a>
           </div>
           <div class="col-md-5 hidden-xs">
             <img src="img/conversation.png" class="rocket animated bounce">
@@ -118,7 +118,7 @@
             </div>
           </div>
         </div>
-        <div class="container warmorange" id="thisworkshop">
+        <div class="container orangepicture" id="thisworkshop">
           <div class="container">
             <div class="row me-row content-ct">
               <h2 class="row-title">This Workshop</h2>
@@ -155,7 +155,7 @@
             </div>
           </div>
         </div> 
-        <div class="container warmorange" id="dates">
+        <div class="container orangepicture" id="dates">
           <div class="container">
             <div class="row me-row content-ct">
               <h2 class="row-title">Important Dates</h2>
@@ -207,7 +207,7 @@
         </div>
         <!-- End: Speakers -->
 
-        <div class="row me-row content-ct warmorange" id="organizers">
+        <div class="row me-row content-ct orangepicture" id="organizers">
           <h2 class="row-title">Organizers</h2>
           <div class="col-md-4 feature">
             <img src="img/speaker-3.png" class="speaker-img">
@@ -324,7 +324,7 @@
           </div>
         </div>
 
-        <div class="container warmorange" id="program">
+        <div class="container orangepicture" id="program">
           <div class="container">
             <div class="row me-row content-ct">
               <h2 class="row-title">Program</h2>
@@ -379,7 +379,7 @@
           </div>
         </div>
 
-        <div class="container warmorange" id="contact">
+        <div class="container orangepicture" id="contact">
           <div class="container">
             <div class="row me-row content-ct">
               <h2 class="row-title">Contact</h2>
