--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             </div>
           </div>
         </div>
-        <div class="container orangepicture" id="thisworkshop">
+        <div class="container tealpicture" id="thisworkshop">
           <div class="container">
             <div class="row me-row content-ct">
               <h2 class="row-title">This Workshop</h2>
@@ -155,7 +155,7 @@
             </div>
           </div>
         </div> 
-        <div class="container orangepicture" id="dates">
+        <div class="container tealpicture" id="dates">
           <div class="container">
             <div class="row me-row content-ct">
               <h2 class="row-title">Important Dates</h2>
@@ -207,7 +207,7 @@
         </div>
         <!-- End: Speakers -->
 
-        <div class="row me-row content-ct orangepicture" id="organizers">
+        <div class="row me-row content-ct tealpicture" id="organizers">
           <h2 class="row-title">Organizers</h2>
           <div class="col-md-4 feature">
             <img src="img/speaker-3.png" class="speaker-img">
@@ -324,7 +324,7 @@
           </div>
         </div>
 
-        <div class="container orangepicture" id="program">
+        <div class="container tealpicture" id="program">
           <div class="container">
             <div class="row me-row content-ct">
               <h2 class="row-title">Program</h2>
@@ -379,7 +379,7 @@
           </div>
         </div>
 
-        <div class="container orangepicture" id="contact">
+        <div class="container tealpicture" id="contact">
           <div class="container">
             <div class="row me-row content-ct">
               <h2 class="row-title">Contact</h2>
