--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="This is a workshop of the 19th International Conference on Persuasive Technology 2024">
   <meta name="author" content="Nele Albers">
-  <title>Workshop on Algorithmic Behavior Change Support</title>
+  <title>Algorithmic Behavior Change Support</title>
   <link rel="icon" href="https://raw.githubusercontent.com/ALBECS-Workshop/ALBECS-Workshop.github.io/main/img/conversation.png">
 
   <!-- Bootstrap -->
@@ -94,8 +94,7 @@
         <!-- Start: Header -->
         <div class="row hero-header" id="home">
           <div class="col-md-7">
-            <img src="img/multittrust-logo.png" class="logo">
-            <h1>Algorithmic Behavior Change Support Workshop</h1>
+            <h1>Workshop on Algorithmic Behavior Change Support</h1>
             <h3>10<sup>th</sup> April 2024</h3>
             <h3>This workshop is part of the 19th International Conference on Persuasive Technology 2024</h3>
             <h4>Wollongong, Australia</h4>
