--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
           <div class="col-md-4 col-sm-6">
             <p>&copy; 2023 All rights reserved.</p>
           </div>
-          <div> Designed by Akash Bhadange (designerdada) | Handshake icon made by <a href="https://www.flaticon.com/authors/dinosoftlabs" title="DinosoftLabs"> DinosoftLabs </a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com'</a>
+          <div> Designed by Akash Bhadange (designerdada).
           </div>
         </div>
       </div>
