add more pictures

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
             </ul>
           </div>
 		  <div class="col-md-4 feature">
-            <img src="img/speaker-4.png" class="speaker-img">
+            <img src="img/caroline_figueroa.jfif" class="speaker-img">
             <h3>Caroline Figueroa</h3>
             <p>Delft University of Technology</p>
             <ul class="speaker-social">
@@ -250,7 +250,7 @@
             </ul>
           </div>
 		  <div class="col-md-4 feature">
-            <img src="img/speaker-6.png" class="speaker-img">
+            <img src="img/ananya_bhattacharjee.png" class="speaker-img">
             <h3>Ananya Bhattacharjee</h3>
             <p>University of Toronto</p>
             <ul class="speaker-social">
@@ -274,7 +274,7 @@
             </ul>
           </div>
 		  <div class="col-md-4 feature">
-            <img src="img/speaker-2.png" class="speaker-img">
+            <img src="img/joseph_jay_williams.png" class="speaker-img">
             <h3>Joseph Jay Williams</h3>
             <p>University of Toronto</p>
             <ul class="speaker-social">
